Tue May 13 12:09:42 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/tds/iconv.c
	- look up canonical charset before initializing iconv
	* src/tds/alternative_character_sets.h src/tds/character_sets.h 
	- rollback today's change
	* src/apps/tsql.c make message a little clearer

Tue May 13 17:42:41 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* configure.in: enable thread-safe by default

Tue May 13 15:33:10 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* acinclude.m4: added some charset

Tue May 13 14:42:16 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: update doc

Tue May 13 12:05:44 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* freetds.conf src/apps/tsql.c src/tds/login.c:
	* src/tds/mem.c:
	- honour server default block size (improving performance on mssql)

Tue May 13 12:05:44 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/read.c: handle correctly ntext

Tue May 13 11:43:02 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/login.c: 
	- enable some useful socket options
	 - SO_LINGER: do a graceful close of socket (so server know 
	   you are disconnected)
	 - SO_KEEPALIVE: detect server crash

Tue May 13 10:57:44 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/iconv.c: use only 16bit of LCID
	* src/tds/unittests/dataread.c: test tds7+ types (ntext fail)

Tue May 13 10:33:39 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/alternative_character_sets.h:
	* src/tds/character_sets.h:
	- add iso8859-7 (greek) charset

Mon May 12 22:52:34 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/tds/iconv.c better logging of initialization failures

Mon May 12 20:57:22 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c:
	- fixed a bug that cause wire not readed converting from
	  larger-size string (like ucs2 -> iso8859-1)

Mon May 12 17:29:00 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: remove unused function
